--- a/PaperDraft/howmany_NEW.htm
+++ b/PaperDraft/howmany_NEW.htm
@@ -29,7 +29,7 @@ padding-bottom: 3px;
 <p>% How Many Copies Is Enough?<br />
 % Micah Altman; Richard Landau<br />
 % 2016-08-15<br />
-% Revised 2018-06-04 RBL</p>
+% Revised 2018-06-18 RBL</p>
 <p>[[Text blocks in double-square-brackets, such as this is, are editorial notes for the authors to clean up.]]</p>
 <h1 id="title" class="unnumbered">Information Integrity Over the Long Term -- How Many Copies Is Enough?</h1>
 <h4 id="assessing-long-term-durability-of-collections-through-a-flexible-replicable-simulation">Assessing Long-term Durability of Collections Through A Flexible, Replicable Simulation</h4>
@@ -68,6 +68,17 @@ padding-bottom: 3px;
 <li><p>suppose we had two copies on the best disks we can find and migrate them within the service period.</p></li>
 <li><p>Don't sweat the small stuff, glitches are covered by protection over a wide range.</p></li>
 </ul>
+<p>Get two refs for 1e-14 number.</p>
+<p>MTBF discussion: cite returns and other bases for the numbers.</p>
+<p>Is a combo of two Poissons itself Poisson?</p>
+<p>The high end of lifetime is hard to assess.</p>
+<p>Argue that the same hygiene regime serves for both: crappier disks and less wonderul independence. Still need multiples, audit, repair.</p>
+<p>Check Azure erasure code stats.</p>
+<p>Multiple copies, error correction, repair are used at all levels: bits, sectors, files, drives, services. We are adding files to the usual mix.</p>
+<p>Audit whatever the fundamental unit of failure is: bit, sector, disk, file, server.</p>
+<p>Acknowledge immortal data services; then audit what?</p>
+<p>Six copies if broad span correlated failures.</p>
+<p>RS(m,n) and repair-when-fail has vastly longer data life than multiple independent disks however reliable.</p>
 <!-- END:TODO:RICK -->
 <h1 id="motivation">Motivation</h1>
 <ul>
@@ -128,13 +139,13 @@ padding-bottom: 3px;
 <blockquote>
 <p>&quot;Time and accident are committing daily havoc on the originals deposited in our public offices. . . . The lost cannot be recovered; but let us save what remains: not by vaults and locks which fence them from the public eye and use, in consigning them to the waste of time, but by such a multiplication of copies, as shall place them beyond the reach of accident.&quot; <a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a></p>
 </blockquote>
-<p>But even multiple copies of collections deteriorate over time, from small erosions of individual documents or larger losses from external shocks. <strong>Exhibit nnn</strong> shows the deterioration of collections with multiple copies over long periods of time. A strategy that includes monitoring and repair of documents is required for long-term preservation. [[RBL: find the results for this case.]]</p>
+<p>But even multiple copies of collections deteriorate over time, from small erosions of individual documents or larger losses from external shocks. <strong>Exhibit nnn</strong> shows the deterioration of collections with multiple copies over long periods of time. [[RBL: find the results for this case.]] A modest number of copies, even of very high quality, cannot guarantee archival storage over long periods. A strategy that includes monitoring and repair of documents is required for long-term preservation.</p>
 <h1 id="protect-against-a-wide-range-of-conditions">Protect Against a Wide Range of Conditions</h1>
 <h3 id="what-range-of-storage-error-rates-should-we-consider">What Range of Storage Error Rates Should We Consider?</h3>
 <p>One basic question should be answered before embarking on such simulations: what is the failure rate of stored documents? This is a difficult question due to a lack of real data.</p>
 <p>There is some data on the failure rate of individual disk drives over time. Thanks to Backblaze, Google, and others, there is some published empirical data on failure rates of disk drives of recent technology vintages. [[citations needed]] These figures refer to replacements of entire disk drives during the useful life and wear-out periods of device use. That is, they exclude infant failures but include mid-life and senescence. Unfortunately, we do not get much information on the rates of sector failures, bad block replacements, and so forth.</p>
 <h4 id="drive-failures-may-place-limits-on-sector-lifetime">Drive Failures May Place Limits on Sector Lifetime</h4>
-<p>We can try to estimate bounds on the failure of sectors by extrapolating from the failure of drives. Example: If disks are allowed to run until the drive fails, then the life of all the sectors on the disk cannot be longer than the life of the entire drive. That is, the half-life of the drive is an upper bound on the half-life of sectors contained on that drive.</p>
+<p>We can try to estimate bounds on the failure of sectors by extrapolating from the failure of drives. Example: At the low end of the range of disk quality, with no active error correction or repair, we can estimate bound the lifetime of sectors by examining disk drive failures. If disks are allowed to run until the drive fails, then the life of all the sectors on the disk cannot be longer than the life of the entire drive. That is, the half-life of the drive is an upper bound on the half-life of sectors contained on that drive.</p>
 <p>Backblaze, on the basis of experience with hundreds of thousands of disk drives, has estimated the failure rates of drives for the first four years. [[citation needed]] <strong>Exhibit nnn</strong> shows the estimated drive lifetimes based on that experience. [[Source spreadsheet = PaperDraft/DiskFailuresDuringRAIDRebuild.xls sheet Survival2Halflife]]</p>
 <h5 id="exhibit-nnn-disk-failure-rates-from-measured-experience">Exhibit nnn: Disk failure rates from measured experience</h5>
 <table style="width:49%;">
@@ -224,6 +235,7 @@ padding-bottom: 3px;
 </table>
 <p>Based on the experience of Backblaze, at least, the drive survival rate is much lower than is shown here after the third year of production use.</p>
 <h4 id="reducing-disk-drive-failures-in-production">Reducing Disk Drive Failures in Production</h4>
+<p>The low end of the quality scale might be estimated by simply watching data deteriorate over time. At the other end of the scale, high quality, high lifetimes for data, can be achieved with strategies that actively avoid or detect and repair errors as they occur. This way, very reliable storage can be achieved with even moderately reliable components.</p>
 <p>Some storage installations may choose to preempt wear-out drive failures by replacing drives at the end of some &quot;service lifetime.&quot; From the Backblaze numbers (see <strong>Exhibit nnn</strong>) that service lifetime would probably be not much more than three years. Such an &quot;error-avoidance&quot; strategy would truncate the sharply rising end of the bathtub curve where drives pass from maturity to senescence.</p>
 <p>We have not encountered data on the performance of disk drives or blocks in RAID and erasure coding arrays, the effect of pre-emptive data scrubbing or active patrolling, etc.</p>
 <p>Obviously, redundant implementation such as RAID dramatically reduces the loss of data. Still, there is the possibility with RAID5 that a second drive fails while a previously failed drive is being rebuilt. RAID6, with two redundant drives, is a partial solution to this problem, but storage experts now do not view even this as a long-term solution as disk sizes increase. Discussion of this situation is beyond the scope of this paper.</p>
@@ -356,6 +368,26 @@ padding-bottom: 3px;
 <p>We do not have good information on the sector error rates of our storage media, particularly if we are buying a service from an outside vendor. Since such factors are beyond our control, we should choose strategies to protect our document collections from a <em>wide</em> range of circumstances that we might encounter.</p>
 <h1 id="visit-your-documents-regularly">Visit Your Documents Regularly</h1>
 <p>Verify and repair the multiple copies. In general, we will use the term &quot;auditing&quot; to refer to checking documents for validity and repairing any errors discovered, wherever possible.</p>
+<h3 id="strategies-to-achieve-very-long-data-lifetimes">Strategies to Achieve Very Long Data Lifetimes</h3>
+<p>How can we protect data over the long term against a wide range of error conditions? A single copy is vulnerable, regardless of its quality. Multiple high-quality copies still deteriorate over long periods. We must adopt active strategies to detect and correct errors in data to preserve the corpus over long periods. Such strategies must include three components: detecting errors, correcting errors, and actively seeking errors.</p>
+<ul>
+<li>Detecting errors requires a certain redundancy in storage, typically parity, or comparison of copies, or special encodings. There is always some degree of damage that cannot be detected accurately, e.g., multiple errors in a simple parity system.<br />
+</li>
+<li>Correcting errors requires restoring a damaged copy with a correct copy, either by consulting a known good copy or by using an error-correcting encoding in the storage of the data. The ability of a system to correct errors is also limited, e.g., if all copies of the data are damaged.<br />
+</li>
+<li>Actively seeking errors requires a mechanism outside normal usage that examines all the data and checks its validity. The system searches all the data for latent errors in order to locate (and repair) them before they pile up and overwhelm the redundancy of storage.</li>
+</ul>
+<p>Strategies that include these three components are routinely used at low levels within computer systems.</p>
+<ul>
+<li><p>Small regions of memory, e.g., RAM banks, disk sectors, are protected with parity bits or error-correcting codes. Parity provides only limited error detection; error-correcting codes provide some higher level of redundancy for detection and correction. And large memory arrays may be actively scrubbed to find and correct errors early.</p></li>
+<li><p>Disk drives tend to fail all at once, but they are often protected by RAID or eraasure code structures and controllers. Such arrays of disks include redundant recording and parity to permit repair of failed drives.</p></li>
+</ul>
+<p>This study is concerned with providing a degree of redundancy and error correction for other groupings of data of different sizes:</p>
+<ul>
+<li>Files or documents of intermediate size between sectors and drives; and</li>
+<li>Entire storage services containing thousands of files.</li>
+</ul>
+<p>We explore a wide variety of strategies for protecting large collections of documents. Many variations are possible, of quality of storage devices and arrays, degree of redundancy (number of copies), frequency and speed of auditing and repair. With appropriate choices along these dimensions, the probability of permanent loss of documents can be reduced to very low levels. Even with low quality storage media and unreliable storage services, a high degree of redundancy and aggressive auditing and repair can protect collections against the ravages of age, imperfect administration, and unstable commercial services.</p>
 <h3 id="the-process-of-auditing-and-repairing">The Process of Auditing and Repairing</h3>
 <p>Auditing the collection to verify the validity of remote copies of documents, and to repair discovered errors, can greatly reduce permanent document losses over time. Without auditing and its attendant repair of damaged documents, minor errors will continually erode a stored collection; the collection will to continue to decline over time with no barrier to extinction. No number of redundant copies without auditing, certainly no <em>reasonable</em> number, will prevent significant document losses over a long period. In addition, major shocks to the system may cause servers to fail, thus reducing the actual number of active copies of a collection and accelerating further deterioration.</p>
 <p>Auditing is essential to maintaining the health of a collection. This is the method by which errors are detected and corrected. Without auditing, errors tend to build up in a collection and eventually cause some permanent document losses, regardless of how many copies of the documents we keep. We can think of the auditing process as health care for electronic documents: minor problems will be found and fixed before they cause permanent damage. Of course, it will always be possible for unlikely juxtapositions of errors to cause a document to be lost, but regular auditing of a modest number of copies can minimize permanent losses.</p>
@@ -426,12 +458,12 @@ padding-bottom: 3px;
 <li>mtbf, mttf, and such are particularly hard to grasp</li>
 </ul>
 <p>The likelihood of an error in a disk bit or sector, or even the failure of an entire disk, is a very small number with many zeroes before the first significant digit. We choose to invert the error rate into a function of lifetime of that bit (or sector containing many bits). Thus a probability of a bit failing in a year of 10E-15 becomes a mean lifetime of 100E12 years. Expressed that way, the figure seems excessively optimistic. (The age of the universe is currently estimated to be 14E9 years.) Data on such a disk would be effectively immortal, and that does not correlate with experience.</p>
-<p>We agree with Rosenthal (2010) [[citation needed]] and others that such estimates are merely marketing projections that are not based on empirical data. Using simulations to investigate such nearly immortal disks would be expensive and fruitless. If there are no errors at all, then no protective strategy is needed. However, the statement &quot;no errors&quot; does not correlate well with practical experience.</p>
+<p>We agree with Rosenthal (2010) [[citation needed]] and others that such estimates are merely marketing projections that are often not based on empirical data. Using simulations to investigate such nearly immortal disks would be expensive and fruitless. If there are no errors at all, then no protective strategy is needed. However, the statement &quot;no errors&quot; does not correlate well with practical experience.</p>
 <h4 id="lifetime-easier-to-understand-than-error-rate">Lifetime Easier to Understand Than Error Rate</h4>
 <p>The inverse of error rate is usually expressed in terms of MTBF or MTTF, and, initially, we expressed all parameters as mean exponential lifetime. But MTBF and MTTF are hard even for most experts to grasp, and uninformative or misleading for non-experts.</p>
 <h4 id="be-skeptical-of-mtbf">Be Skeptical of MTBF</h4>
 <p>The disk manufacturing industry tends to express the device lifetime as MTBF or MTTF. This is an expected (mean) exponential lifetime for the device, but that does not give much information about the lifetime of data in individual files, blocks, or bits on the disk. There are several layers of error detection and correction in storage systems that tend to mask small errors in disk data and obscure the relationship between small data errors and drive failures.</p>
-<p>MTBF, Mean Time Between Failures, is a slippery notion, much touted by marketing departments and viewed warily by users. If the object in question is removed from service after only one failure, as is the case here with documents, it is perhaps more appropriate to speak of MTTF, Mean Time To Failure. MTTF is intended to be equivalent to the mean lifetime (before failure) of the object, and, if one assumes that failures are a Poisson process, then MTTF is the mean exponential lifetime of the object.</p>
+<p>MTBF, Mean Time Between Failures, is a slippery notion, much touted by marketing departments and viewed warily by users. Such figures may be derived from drive failure rates observed in accelerated life testing or returns from early deployments. If the object in question is removed from service after only one failure, as is the case here with documents, it is perhaps more appropriate to speak of MTTF, Mean Time To Failure. MTTF is intended to be equivalent to the mean lifetime (before failure) of the object, and, if one assumes that failures are a Poisson process, then MTTF is the mean exponential lifetime of the object.</p>
 <p>Most non-marketing literature considers MTBF estimates from manufacturers to be exaggerated considerably, by factors of three or four at best. The annual failure rates of disk drives in large collections of drives are much higher than would be expected based on published MTBF estimates of 1E6 hours or more. [[citations needed]]</p>
 <p>Even if we understood the source and accuracy of stated MTTF estimates for disk drives, we would still not have information about individual sector failures within a drive that cause document failures, nor the relative frequencies of sector failures versus drive failures.</p>
 <h3 id="reliability-varies-over-time">Reliability Varies Over Time</h3>
